Fix imports and dependency arrays

--- a/lil-bits/.eslintrc.json
+++ b/lil-bits/.eslintrc.json
@@ -1,3 +1,9 @@
+// Used chatGPT to make sure this was installed correctly
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "plugins": ["react-hooks"],
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  }
 }
