--- a/lil-bits/package.json
+++ b/lil-bits/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.3",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "ol": "^9.2.4",
     "react": "^18",
