--- a/lil-bits/package.json
+++ b/lil-bits/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.5"
+    "react-hook-form": "^7.51.5",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
